cmake_minimum_required(VERSION 3.30)
project(Beginning_CPP_Programming)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_BUILD_TYPE Debug)

add_subdirectory(S4L027)
add_subdirectory(S6L045)
add_subdirectory(S6L050)
add_subdirectory(S7L056)
add_subdirectory(S7L059)
add_subdirectory(S12L119)
add_subdirectory(S13L137)

